<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unity_ros2</name>
  <version>0.0.1</version>
  <description>Unity project for ROS2</description>
  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>
  <license>Apache Licencse, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcldotnet_common</build_depend>
  <build_depend>rcldotnet</build_depend>
  <build_depend>rosidl_generator_cs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
